# ONTR-MENU-TEMPLATE

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  compile_commands.json
ONTR-MENU/: Core.cpp  main.cpp
ONTR-MENU/GUI/: GUI.h
ONTR-MENU/GUI/DeviceIO/: device.cpp  device.h  io.h  wndproc.h
ONTR-MENU/GUI/Elements/: Animation.h  PagesData.h  UIstyle.h  Widgets.h
ONTR-MENU/GUI/ImGui-UI/: imgui.h
ONTR-MENU/GUI/Languages/: Switch.hpp  en_US.h  zh_CN.h
ONTR-MENU/GUI/Layouts/: AIM.cpp  Config.cpp  ESP.cpp  Home.cpp  Panel.cpp  SwitchPage.hpp
ONTR-MENU/HACK/: HACK.h
ONTR-MENU/HACK/HACK-DATA/: HACK-Gui.h
ONTR-MENU/HACK/SDK/: client_dll.hpp  engine2_dll.hpp
ONTR-MENU/HACK/include/: config.h
ONTR-MENU/lib/NVIDIA-SDK/: nvapi_lite_common.h
ONTR-MENU/lib/VendorModle/: API.cpp  nvidia-API.hpp  stb-API.hpp
ONTR-MENU/lib/VendorModle/Resources/: GUI-icon.h  GUI-image.h
ONTR-MENU/lib/stb/: stb_image_resize.h  stb_image_write.h
tests/: test_readme.py
